// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot bsmCoordinates wzdx 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="menu-container map-control-container"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded Mui-expanded css-mocked-MuiPaper-root-MuiAccordion-root"
        style="--Paper-shadow: none; background-color: rgb(255, 255, 255);"
      >
        <h3
          class="MuiAccordion-heading css-mocked-MuiAccordion-heading"
        >
          <div
            aria-controls="panel1-content"
            aria-expanded="true"
            class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
            id="panel1-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Mui-expanded css-mocked-MuiAccordionSummary-content"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 accordion-header museo-slab css-mocked-MuiTypography-root"
              >
                Map Layers
              </p>
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-mocked-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                style="color: rgba(0, 0, 0, 0.87);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
        </h3>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-mocked-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="panel1-header"
                class="MuiAccordion-region"
                id="panel1-content"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                >
                  <div
                    class="MuiFormGroup-root css-mocked-MuiFormGroup-root"
                  >
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            RSU Viewer
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            Heatmap
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            V2x Message Viewer
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            WZDx Viewer
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            Intersections
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            Moove AI Viewer
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            HAAS Alert Viewer
                          </p>
                        </label>
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-mocked-MuiDivider-root"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded Mui-expanded css-mocked-MuiPaper-root-MuiAccordion-root"
        style="--Paper-shadow: none; background-color: rgb(255, 255, 255);"
      >
        <h3
          class="MuiAccordion-heading css-mocked-MuiAccordion-heading"
        >
          <div
            aria-controls="panel3-content"
            aria-expanded="true"
            class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
            id="panel3-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Mui-expanded css-mocked-MuiAccordionSummary-content"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 accordion-header museo-slab css-mocked-MuiTypography-root"
              >
                Filter RSUs
              </p>
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-mocked-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                style="color: rgba(0, 0, 0, 0.87);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
        </h3>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-mocked-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="panel3-header"
                class="MuiAccordion-region"
                id="panel3-content"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-mocked-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mocked-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for="vendor"
                    >
                      Vendor
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-mocked-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
                    >
                      <div
                        aria-controls="mui-1"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="vendor"
                        class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-mocked-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                        id="vendor"
                        role="combobox"
                        tabindex="0"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                        >
                          Select Vendor
                        </p>
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput css-mocked-MuiSelect-nativeInput"
                        tabindex="-1"
                        value="Select Vendor"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-mocked-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-mocked-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-w1u3ce"
                        >
                          <span>
                            Vendor
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                  >
                    RSU Status
                  </p>
                  <div
                    class="MuiFormControl-root css-mocked-MuiFormControl-root"
                  >
                    <div
                      class="MuiFormGroup-root MuiRadioGroup-root css-mocked-MuiFormGroup-root"
                      role="radiogroup"
                    >
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                      >
                        <span
                          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-mocked-MuiButtonBase-root-MuiRadio-root"
                        >
                          <input
                            checked=""
                            class="PrivateSwitchBase-input css-j8yymo"
                            name="mui-2"
                            type="radio"
                            value="online"
                          />
                          <span
                            class="css-1qiat4j"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                        >
                          Online Status
                        </p>
                      </label>
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                      >
                        <span
                          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-mocked-MuiButtonBase-root-MuiRadio-root"
                        >
                          <input
                            class="PrivateSwitchBase-input css-j8yymo"
                            name="mui-2"
                            type="radio"
                            value="scms"
                          />
                          <span
                            class="css-1qiat4j"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                        >
                          SCMS Status
                        </p>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary museo-slab capital-case css-mocked-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Message Counts
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary museo-slab capital-case css-mocked-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Display RSU Status
    </button>
    <div
      class="container-fluid"
      style="width: 100%; height: calc(100vh - 119px); display: flex;"
    >
      <div
        style="position: relative; width: 100%; height: 100%;"
      />
    </div>
  </div>
</div>
`;

exports[`snapshot bsmData clicked 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="menu-container map-control-container"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded Mui-expanded css-mocked-MuiPaper-root-MuiAccordion-root"
        style="--Paper-shadow: none; background-color: rgb(255, 255, 255);"
      >
        <h3
          class="MuiAccordion-heading css-mocked-MuiAccordion-heading"
        >
          <div
            aria-controls="panel1-content"
            aria-expanded="true"
            class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
            id="panel1-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Mui-expanded css-mocked-MuiAccordionSummary-content"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 accordion-header museo-slab css-mocked-MuiTypography-root"
              >
                Map Layers
              </p>
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-mocked-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                style="color: rgba(0, 0, 0, 0.87);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
        </h3>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-mocked-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="panel1-header"
                class="MuiAccordion-region"
                id="panel1-content"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                >
                  <div
                    class="MuiFormGroup-root css-mocked-MuiFormGroup-root"
                  >
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            RSU Viewer
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            Heatmap
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            V2x Message Viewer
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            WZDx Viewer
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            Intersections
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            Moove AI Viewer
                          </p>
                        </label>
                      </p>
                    </div>
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-mocked-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              class="PrivateSwitchBase-input css-j8yymo"
                              data-indeterminate="false"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="CheckBoxOutlineBlankIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                              />
                            </svg>
                          </span>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            HAAS Alert Viewer
                          </p>
                        </label>
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-mocked-MuiDivider-root"
      />
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded Mui-expanded css-mocked-MuiPaper-root-MuiAccordion-root"
        style="--Paper-shadow: none; background-color: rgb(255, 255, 255);"
      >
        <h3
          class="MuiAccordion-heading css-mocked-MuiAccordion-heading"
        >
          <div
            aria-controls="panel3-content"
            aria-expanded="true"
            class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
            id="panel3-header"
            role="button"
            tabindex="0"
          >
            <div
              class="MuiAccordionSummary-content Mui-expanded css-mocked-MuiAccordionSummary-content"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 accordion-header museo-slab css-mocked-MuiTypography-root"
              >
                Filter RSUs
              </p>
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper Mui-expanded css-mocked-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                style="color: rgba(0, 0, 0, 0.87);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </div>
          </div>
        </h3>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-mocked-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
            >
              <div
                aria-labelledby="panel3-header"
                class="MuiAccordion-region"
                id="panel3-content"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth css-mocked-MuiFormControl-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-mocked-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for="vendor"
                    >
                      Vendor
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-mocked-MuiInputBase-root-MuiOutlinedInput-root-MuiSelect-root"
                    >
                      <div
                        aria-controls="mui-3"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="vendor"
                        class="MuiSelect-select MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input css-mocked-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
                        id="vendor"
                        role="combobox"
                        tabindex="0"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                        >
                          Select Vendor
                        </p>
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput css-mocked-MuiSelect-nativeInput"
                        tabindex="-1"
                        value="Select Vendor"
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-mocked-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-mocked-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-w1u3ce"
                        >
                          <span>
                            Vendor
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                  >
                    RSU Status
                  </p>
                  <div
                    class="MuiFormControl-root css-mocked-MuiFormControl-root"
                  >
                    <div
                      class="MuiFormGroup-root MuiRadioGroup-root css-mocked-MuiFormGroup-root"
                      role="radiogroup"
                    >
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                      >
                        <span
                          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-mocked-MuiButtonBase-root-MuiRadio-root"
                        >
                          <input
                            checked=""
                            class="PrivateSwitchBase-input css-j8yymo"
                            name="mui-4"
                            type="radio"
                            value="online"
                          />
                          <span
                            class="css-1qiat4j"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                        >
                          Online Status
                        </p>
                      </label>
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-mocked-MuiFormControlLabel-root"
                      >
                        <span
                          class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary MuiRadio-root MuiRadio-colorPrimary css-mocked-MuiButtonBase-root-MuiRadio-root"
                        >
                          <input
                            class="PrivateSwitchBase-input css-j8yymo"
                            name="mui-4"
                            type="radio"
                            value="scms"
                          />
                          <span
                            class="css-1qiat4j"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                        >
                          SCMS Status
                        </p>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary museo-slab capital-case css-mocked-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Message Counts
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary museo-slab capital-case css-mocked-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Display RSU Status
    </button>
    <div
      class="container-fluid"
      style="width: 100%; height: calc(100vh - 119px); display: flex;"
    >
      <div
        style="position: relative; width: 100%; height: 100%;"
      />
    </div>
  </div>
</div>
`;
